--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
-:root{
- --base_color:#F6F4F0;
- --secondary_color:#0A3727;
- --third_color:#3CA288;
-    --font:serif;
+:root {
+    --base_color: #F6F4F0;
+    --secondary_color: #0A3727;
+    --third_color: #3CA288;
+    --font: serif;
 }
-body{
+
+body {
     font-family: var(--font);
-   
 }
-.main{
+
+.main {
     background-color: var(--secondary_color);
     color: var(--base_color);
     text-align: center;
 }
-.logo{
+
+.logo {
     text-align: center;
 }
-.top-container{
+
+.top-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 70%;
@@ -29,67 +32,99 @@ body{
     text-align: center;
     font-size: 150%;
 }
-.bottom-helper{
-  width: 100%;
+
+.top-helper {
     background-color: var(--secondary_color);
-    position: fixed;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+}
+
+.bottom-helper {
+    width: 100%;
+    background-color: var(--secondary_color);
+    position: absolute;
     bottom: 0px;
     left: 0px;
-    border-radius: 1vh;
+    right: 0px;
 }
-.bottom-container{
+
+.bottom-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     padding-top: 1vh;
     padding-bottom: 1vh;
-    
-   
 }
-.bottom-container a{
- color: var(--base_color);
+
+.bottom-container a {
+    color: var(--base_color);
     font-size: 80%;
-    
 }
-.links_header,.informations_header{
+
+.links_header,
+.informations_header {
     display: grid;
-grid-template-columns: 1fr 10fr;
+    grid-template-columns: 1fr 10fr;
     background-color: var(--secondary_color);
     color: var(--base_color);
     font-size: 100%;
     text-align: center;
-     
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+}
 
-}
-.links_arrow,.informations_arrow{
- display: inline-block;
+.links_arrow,
+.informations_arrow {
+    display: inline-block;
     font-size: 2pt;
-  
-    
 }
-.links_h,.informations_h{
-     display: inline-block;
-         
+
+.links_h,
+.informations_h {
+    display: inline-block;
 }
-.arrow{
+
+.arrow {
     position: relative;
     top: 30%;
     margin-left: 20pt;
     transition: all 0.5s;
     border-radius: 10px;
 }
-.arrow:hover{
+
+.arrow:hover {
     transform: scale(1.1);
     color: var(--third_color);
-    background-color: var(--base_color);  
+    background-color: var(--base_color);
 }
-.footer{
+
+.footer {
     transition: all 0.3s;
 }
-.footer:hover{
+
+.footer:hover {
     transform: scale(1.2);
     color: blueviolet;
+}
+
+.header_hover {
+    transition: all 0.5s;
+}
+
+.header_hover:hover {
+    transform: scale(1.1);
+    color: var(--secondary_color);
+    background: var(--base_color);
+}
+
+.header_a {
+    text-decoration: none;
+    color: var(--base_color);
 }
