--- a/style.css
+++ b/style.css
@@ -128,3 +128,11 @@ body {
     text-decoration: none;
     color: var(--base_color);
 }
+
+.info {
+    margin-left: 10%;
+    text-align: center;
+    margin-top: 22%;
+    font-family: verdana;
+    font-size: 130%;
+}
